solved all flex box problems for some reason I keep forgetting about gap lmao so easy to space stuff out with it

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,8 +10,23 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 32px;
 }
 
+.images {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.boxes {
+  display: block;
+  max-width: 200px;
+  align-items: center;
+  text-align: center;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
