--- a/flex/07-flex-layout-2/solution/solution.css
+++ b/flex/07-flex-layout-2/solution/solution.css
@@ -78,7 +78,7 @@ a {
 
 .card {
   padding: 16px;
-  width: 300px;
+  width: 400px;
 }
 
 .footer {
